--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
       <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
       <meta name="description" content="collection of tools, tips, cheat sheets, and resources">
       <meta name="twitter:title" content="CYBER MIND SPACE ETHICAL HACKING TOOLKIT">
-      <meta name="twitter:site" content="https://github.com/0xCyberY/ehtk">
-      <meta name="twitter:creator" content="@0xCyberY">
+      <meta name="twitter:site" content="https://github.com/ALMADADALI/CYBER-MIND-SPACE-ETHICAL-HACKING-TOOLKIT">
+      <meta name="twitter:creator" content="@ALMADADALI">
               <meta property="og:title" content="CYBER MIND SPACE ETHICAL HACKING TOOLKIT">
       <meta property="og:description" content="collection of tools, cheat sheets, and resources.&quot; />">
-      <meta property="og:url" content="https://github.com/0xCyberY/ehtk">
+      <meta property="og:url" content="https://github.com/ALMADADALI/CYBER-MIND-SPACE-ETHICAL-HACKING-TOOLKIT">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link type="text/css" rel="stylesheet" href="css/hack.css">
       <link rel=“icon” href=”favicon.ico” type=“image/x-icon”>
