--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
          <div class="row">
             <div class="col-md-12 top-section">
                <div class="follow-section">
-                  <h3>Follow me on Twitter: <a href="https://x.com/cybermindspace">@CyberMindSpace</a><br>Follow me on YouTube: <a href="https://youtube.com/@cybermindspace">@cybermindspace</a><br>Join our Discord: <a href="https://discord.gg/cybermindspace">Cyber Mind Space</a><br>Join our Telegram: <a href="https://t.me/cybermindspace">Cyber Mind Space</a><br>Visit our Website: <a href="https://cybermindspace.com">cybermindspace.com</a><br>The project is on Github: <a href="https://github.com/ALMADADALI">CYBER MIND SPACE ETHICAL HACKING TOOLKIT</a></h3>
+                  <h3>Follow me on Twitter: <a href="https://x.com/cybermindspace">@CyberMindSpace</a><br>Follow me on YouTube: <a href="https://youtube.com/@cybermindspace">@cybermindspace</a><br>Join our Discord: <a href="https://discord.gg/qA3CqZ86hY">Cyber Mind Space</a><br>Join our Telegram: <a href="https://t.me/cybermindspace">Cyber Mind Space</a><br>Visit our Website: <a href="https://cybermindspace.com">cybermindspace.com</a><br>The project is on Github: <a href="https://github.com/ALMADADALI">CYBER MIND SPACE ETHICAL HACKING TOOLKIT</a></h3>
                 </div>
                                <div id="header">
                   CYBER MIND SPACE ETHICAL HACKING TOOLKIT
