--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link type="text/css" rel="stylesheet" href="css/hack.css">
       <link rel=“icon” href=”favicon.ico” type=“image/x-icon”>
-      <link rel=“shortcut icon” href=“/favicons/favicon.ico?” type=“image/x-icon”>
-      <link rel="icon" type="image/png" sizes="32x32" href="./favicons/favicon-32x32.png">
-      <link rel="apple-touch-icon" sizes="57x57" href="/favicons/apple-icon-57x57.png">
-      <link rel="apple-touch-icon" sizes="60x60" href="/favicons/apple-icon-60x60.png">
-      <link rel="apple-touch-icon" sizes="72x72" href="/favicons/apple-icon-72x72.png">
-      <link rel="apple-touch-icon" sizes="76x76" href="/favicons/apple-icon-76x76.png">
-      <link rel="apple-touch-icon" sizes="114x114" href="/favicons/apple-icon-114x114.png">
-      <link rel="apple-touch-icon" sizes="120x120" href="/favicons/apple-icon-120x120.png">
-      <link rel="apple-touch-icon" sizes="144x144" href="/favicons/apple-icon-144x144.png">
-      <link rel="apple-touch-icon" sizes="152x152" href="/favicons/apple-icon-152x152.png">
-      <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-icon-180x180.png">
-      <link rel="icon" type="image/png" sizes="192x192"  href="/favicons/android-icon-192x192.png">
-      <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
-      <link rel="icon" type="image/png" sizes="96x96" href="/favicons/favicon-96x96.png">
-      <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
-      <link rel="manifest" href="/favicons/manifest.json">
-      <link rel="manifest" href="/favicons/browserconfig.xml">
+      <link rel=“shortcut icon” href=“/logo/favicon.ico?” type=“image/x-icon”>
+      <link rel="icon" type="image/png" sizes="32x32" href="./logo/favicon-32x32.png">
+      <link rel="apple-touch-icon" sizes="57x57" href="/logo/apple-icon-57x57.png">
+      <link rel="apple-touch-icon" sizes="60x60" href="/logo/apple-icon-60x60.png">
+      <link rel="apple-touch-icon" sizes="72x72" href="/logo/apple-icon-72x72.png">
+      <link rel="apple-touch-icon" sizes="76x76" href="/logo/apple-icon-76x76.png">
+      <link rel="apple-touch-icon" sizes="114x114" href="/logo/apple-icon-114x114.png">
+      <link rel="apple-touch-icon" sizes="120x120" href="/logo/apple-icon-120x120.png">
+      <link rel="apple-touch-icon" sizes="144x144" href="/logo/apple-icon-144x144.png">
+      <link rel="apple-touch-icon" sizes="152x152" href="/logo/apple-icon-152x152.png">
+      <link rel="apple-touch-icon" sizes="180x180" href="/logo/apple-icon-180x180.png">
+      <link rel="icon" type="image/png" sizes="192x192"  href="/logo/android-icon-192x192.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="/logo/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="96x96" href="/logo/favicon-96x96.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="/logo/favicon-16x16.png">
+      <link rel="manifest" href="/logo/manifest.json">
+      <link rel="manifest" href="/logo/browserconfig.xml">
       <meta name="msapplication-TileColor" content="#ffffff">
-      <meta name="msapplication-TileImage" content="/favicons/ms-icon-144x144.png">
+      <meta name="msapplication-TileImage" content="/logo/ms-icon-144x144.png">
       <meta name="theme-color" content="#ffffff">
 
       <h1 hidden>CYBER MIND SPACE ETHICAL HACKING TOOLKIT | collection of tools, cheat sheets, and resources</h1>
